2006-07-04  Marcus Brinkmann  <marcus@g10code.de>

	* ath.c: Avoid warning about double defined type byte and other
	hacks to let it build for W32 (backported from LIBGCRYPT-1-2-BRANCH).
	* ath.h, gcrypt.h, tests/benchmark.c, src/types.h: Likewise.

	* gcrypt.h: Revert last change, and instead:
	[_WIN32 || __WIN32__]: Do not include <sys/socket.h>, but
	<winsock2.h> and <ws2tcpip.h>.
	Suggested by Simon Josefsson <jas@extundo.com>.
	
	* Makefile.am (install-data-local, uninstall-local, %.lo,
	(install-def-file, uninstall-def-file): New targets.
	(LTRCCOMPILE, gcrypt_res, gcrypt_res_ldflag, no_undefined,
	(export_symbols, gcrypt_deps): New variables.
	* versioninfo.rc.in: New file.
	* libgcrypt.def: New file from ../w32-dll/libgcrypt.def.

	* gcrypt.h [!HAVE_SYS_SOCKET_H]: Do not include sys/socket.h, but
	the appropriate windows socket header.

2006-06-21  Werner Koch  <wk@g10code.com>

	* global.c (gcry_xcalloc, gcry_xcalloc_secure): Made safe against
	integer overflow.

	* sexp.c (make_space): Return an error on out of core.
	(sexp_sscan): Remove all xmalloc style calls and return proper
	error codes on allocation failures.
	(gcry_sexp_find_token): Ditto.
	(gcry_sexp_nth): 
	
	* sexp.c (gcry_sexp_find_token): Re-indented and removed a cruft
	"while(level);" which fortunately had no effect.

2006-04-28  Werner Koch  <wk@g10code.com>

	* gcrypt.h (GCRY_MD_SHA224): Change value from 306 to 11 to match
	the use in OpenPGP.  There has been no release yet, so we can
	safely do it.

2006-04-22  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_ctl_cmds): New commands:
	GCRYCTL_SET_RANDOM_DAEMON_SOCKET, GCRYCTL_USE_RANDOM_DAEMON.  
	* global.c (gcry_control): Handle new commands, calling
	_gcry_set_random_daemon_socket() and _gcry_use_random_daemon().

2006-04-18  Werner Koch  <wk@g10code.com>

	* gcrypt.h (GCRY_PK_USAGE_CERT, GCRY_PK_USAGE_AUTH)
	(GCRY_PK_USAGE_UNKN): New.

2006-04-01  Moritz Schulte  <moritz@g10code.com>
