@@ -1,3 +1,10 @@
+2006-07-12  Marcus Brinkmann  <marcus@g10code.de>
+
+	* gcrypt.h (GCRY_THREAD_OPTION_PTHREAD_IMPL,
+	(GCRY_THREAD_OPTION_PTH_IMPL): Add missing initializers to
+	suppress gcc warning.
+	Submitted by Victor Stinner <haypo@inl.fr>.
+
 2006-07-04  Marcus Brinkmann  <marcus@g10code.de>
 
 	* ath.c: Avoid warning about double defined type byte and other
